# mlx_overall

./: .gitignore  examples_scratchpad.sh  project_setup.sh  pyproject.toml  temp_prompt.txt  update_copies.sh
.cursor/rules/: repo-overview.mdc
DATA/TOMSAWYER/: tomsawyer.txt
evaluations/: run_evaluations.py
mlx-audio/: requirements.txt
mlx-audio/examples/bible-audiobook/src/: index.ts
mlx-audio/mlx_audio/codec/models/descript/: dac.py
mlx-audio/mlx_audio/codec/tests/: test_descript.py  test_snac.py
mlx-audio/mlx_audio/tts/: audio_player.html  convert.py  generate.py  utils.py
mlx-audio/mlx_audio/tts/models/: base.py
mlx-audio/mlx_audio/tts/models/bark/: bark.py
mlx-audio/mlx_audio/tts/models/dia/: __init__.py  audio.py  config.py  dia.py  layers.py
mlx-audio/mlx_audio/tts/models/kokoro/: kokoro.py  pipeline.py  voice.py
mlx-audio/mlx_audio/tts/models/llama/: llama.py
mlx-audio/mlx_audio/tts/models/outetts/: __init__.py  audio_processor.py  dac_interface.py  outetts.py  prompt_processor.py  tokens.py
mlx-audio/mlx_audio/tts/models/sesame/: __init__.py  sesame.py
mlx-audio/mlx_audio/tts/tests/: test_convert.py  test_models.py
mlx-examples/llms/yek/: yek-output-0611ec69_20250316.txt  yek-output-de7bb22d.txt
mlx-examples/yek/: yek-output-584bd4ff.txt  yek-output-e487cb64.txt
mlx-pretrain/: README.md  convert-to-mlx-lm.py  examine.py  generate.py  generate_lite.py  model-config-sample.yaml  plot-logs.py  requirements.txt  tokenizer-config-sample.yaml  train-tokenizer.py  train.py
src/copies/models/: qwen3.py
src/data_processing/: README.md  baseline_chunker.py  bm25_func.py  convert_to_markdown.py  data_creation_ideas.md  jsonl_utils.py  prepare_training_data.py  semantic_chunker.py
src/evaluations/: run_evaluations.py
src/finetuning/: convert_qwen3.py  download_qwen3.py  finetune_qwen3.sh  lora_config.yaml
src/inference/: generate_qwen3.py
synthetic-data-kit/: CONTRIBUTING.md  DOCS.md  MANIFEST.in  README.md  pyproject.toml
synthetic-data-kit/synthetic_data_kit/: __init__.py  cli.py  config.yaml
synthetic-data-kit/synthetic_data_kit/core/: __init__.py  context.py  create.py  curate.py  ingest.py  save_as.py
synthetic-data-kit/synthetic_data_kit/generators/: __init__.py  cot_generator.py  qa_generator.py
synthetic-data-kit/synthetic_data_kit/models/: __init__.py  llm_client.py
synthetic-data-kit/synthetic_data_kit/parsers/: __init__.py  docx_parser.py  html_parser.py  pdf_parser.py  ppt_parser.py  txt_parser.py  youtube_parser.py
synthetic-data-kit/synthetic_data_kit/utils/: __init__.py  config.py  format_converter.py  llm_processing.py  text.py
synthetic-data-kit/use-cases/: README.md
synthetic-data-kit/use-cases/adding_reasoning_to_llama_3/: README.md  cot_enhancement_tutorial.ipynb  cot_tools_config.yaml
synthetic-data-kit/use-cases/adding_reasoning_to_llama_3/tt_configs/: fft.py  ft-config.yaml  toolcall.py
synthetic-data-kit/use-cases/getting-started/: README.md
